--- a/src/main/resources/templates/WebQuanLy/chi-tiet-san-pham-form.html
+++ b/src/main/resources/templates/WebQuanLy/chi-tiet-san-pham-form.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danh Sách Chi Tiết Sản Phẩm</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" th:href="@{/css/admin.css}">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script th:src="@{/js/sidebar.js}" defer></script>
     <style>
         body { font-family: 'Arial', sans-serif; background-color: #f4f4f9; color: #333; }
         .container { max-width: 1300px; }
