--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,3 +1,12 @@
+
+
+
+
+
+
+
+
+
 <div th:fragment="sidebar" class="sidebar d-flex flex-column p-3 bg-blue text-white" id="sidebar">
     <div class="sidebar-header mb-4 text-center">
         <img th:src="@{/images/acv-logo2.png}" alt="ACV Logo" style="max-width: 50px; height: auto;">
@@ -14,7 +23,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a th:href="@{/acvstore/banhang}" class="nav-link text-white d-flex align-items-center">
+                <a th:href="@{/acvstore/ban-hang}" class="nav-link text-white d-flex align-items-center">
                     <i class="fa-solid fa-cash-register"></i>
                     <span class="nav-text">Bán hàng tại quầy</span>
                 </a>
