--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -60,7 +60,7 @@
     <div class="nav-container flex-grow-1">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a th:href="@{/acvstore/thongke}" class="nav-link text-white">
+                <a th:href="@{/acvstore/thong-ke}" class="nav-link text-white">
                     <i class="fa-solid fa-chart-line"></i> Thống kê
                 </a>
             </li>
@@ -152,7 +152,7 @@
                 <div class="collapse" id="giamgiaSubmenu">
                     <ul class="nav flex-column ms-3">
                         <li class="nav-item">
-                            <a th:href="@{/acvstore/voucher/vouchers}" class="nav-link text-white">
+                            <a th:href="@{/acvstore/phieu-giam-gia}" class="nav-link text-white">
                                 <i class="fa-solid fa-plus-circle"></i> Phiếu giảm giá
                             </a>
                         </li>
