--- a/src/main/resources/templates/WebQuanLy/discount-campaign-form.html
+++ b/src/main/resources/templates/WebQuanLy/discount-campaign-form.html
@@ -337,6 +337,6 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script th:src="@{/js/sidebar.js}"></script>
+<!--<script th:src="@{/js/sidebar.js}"></script>-->
 </body>
 </html>
