--- a/src/main/resources/templates/WebQuanLy/add-chi-tiet-san-pham-form.html
+++ b/src/main/resources/templates/WebQuanLy/add-chi-tiet-san-pham-form.html
@@ -10,7 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/css/tom-select.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <link rel="stylesheet" th:href="@{/css/admin.css}">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script th:src="@{/js/sidebar.js}" defer></script>
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -289,7 +292,19 @@
     </style>
 </head>
 <body>
-<div class="container">
+<div class="d-flex">
+    <!-- Include sidebar fragment -->
+    <div th:replace="~{fragments/sidebar :: sidebar}"></div>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm px-4 justify-content-between fixed-top">
+
+        <div th:replace="~{fragments/account_dropdown :: accountDropdown(user=${user})}"></div>
+    </nav>
+
+
+    <!-- Nội dung chính bên phải -->
+    <div class="content" id="mainContent">
     <h2 class="mb-4 page-title">THÊM CHI TIẾT SẢN PHẨM</h2>
 
     <nav aria-label="breadcrumb">
@@ -518,6 +533,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
