--- a/src/main/resources/templates/WebQuanLy/ban-hang.html
+++ b/src/main/resources/templates/WebQuanLy/ban-hang.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="vi" xmlns:th="http://www.thymeleaf.org">
+<html lang="vi">
 <head>
   <meta charset="UTF-8">
-<!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ACV Store - Bán Hàng</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" th:href="@{/css/admin.css}">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -130,11 +129,9 @@
   </style>
 </head>
 <body class="bg-gray-50 font-sans">
-
 <div class="d-flex">
   <!-- Include sidebar fragment -->
   <div th:replace="~{fragments/sidebar :: sidebar}"></div>
-
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm px-4 justify-content-between fixed-top">
@@ -142,8 +139,9 @@
 
   </nav>
 
+
   <!-- Nội dung chính bên phải -->
-  <div class="content" id="content">
+  <div class="content" id="mainContent">
   <h1 class="text-4xl font-extrabold text-indigo-600 mb-8 text-center">ACV Store - Bán Hàng</h1>
 
   <!-- Tabs -->
