--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -10,8 +10,8 @@ body {
     width: 250px;
     height: 100vh;
     max-height: 100vh;
-    background: #7a7a7a;
-    color: #fff;
+    background: #c8c8c8;
+    color: #000000;
     display: flex;
     flex-direction: column;
     padding: 20px;
