--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -7,7 +7,7 @@
 
 
 
-<div th:fragment="sidebar" class="sidebar d-flex flex-column p-3 bg-blue text-white" id="sidebar">
+<div th:fragment="sidebar" class="sidebar d-flex flex-column p-3 bg-blue text-black" id="sidebar">
     <div class="sidebar-header mb-4 text-center">
         <img th:src="@{/images/acv-logo2.png}" alt="ACV Logo" style="max-width: 50px; height: auto;">
     </div>
