--- a/src/main/resources/templates/WebQuanLy/employee-login.html
+++ b/src/main/resources/templates/WebQuanLy/employee-login.html
@@ -29,6 +29,12 @@
       background-color: #003049;
       color: white;
     }
+    .btn-register-face {
+      width: 100%;
+      background-color: #007bff;
+      color: white;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
@@ -44,6 +50,7 @@
       <input type="password" class="form-control" id="matKhau" name="matKhau" required>
     </div>
     <button type="submit" class="btn btn-login">Đăng nhập</button>
+    <a href="/acvstore/employees/register-face" class="btn btn-register-face">Đăng ký khuôn mặt</a>
 
     <div class="mt-3">
       <div th:if="${param.error}" class="alert alert-danger"
