hoa don và phan nhan su

--- a/src/main/resources/templates/WebQuanLy/customer-login.html
+++ b/src/main/resources/templates/WebQuanLy/customer-login.html
@@ -104,7 +104,7 @@
 <body>
 <div class="login-box">
     <div class="form-title">Chào mừng trở lại</div>
-    <form method="post" action="/acvstore/customers/login">
+    <form method="post" action="/customers/login">
         <div class="mb-3">
             <label for="tenDangNhap" class="form-label">Tên đăng nhập</label>
             <input type="text" class="form-control" id="tenDangNhap" name="tenDangNhap" required>
