--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -29,7 +29,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a th:href="@{/acvstore/hoadon}" class="nav-link text-white d-flex align-items-center">
+                <a th:href="@{/acvstore/hoa-don}" class="nav-link text-white d-flex align-items-center">
                     <i class="fa-solid fa-file-invoice"></i>
                     <span class="nav-text">Hóa đơn</span>
                 </a>
@@ -145,7 +145,7 @@
             <li class="nav-item">
                 <a th:href="@{/acvstore/employees}" class="nav-link text-white d-flex align-items-center">
                     <i class="fa-solid fa-user-tie"></i>
-                    <span class="nav-text">Nhân viên</span>
+                    <span class="nav-text">Nhân sự</span>
                 </a>
             </li>
         </ul>
