--- a/src/main/resources/templates/WebQuanLy/employee-login.html
+++ b/src/main/resources/templates/WebQuanLy/employee-login.html
@@ -34,7 +34,7 @@
 <body>
 <div class="login-box">
   <div class="form-title">Đăng nhập Nhân viên / Admin</div>
-  <form method="post" action="/acvstore/employees/login">
+  <form method="post" action="/acvstore/login">
     <div class="mb-3">
       <label for="tenDangNhap" class="form-label">Tên đăng nhập</label>
       <input type="text" class="form-control" id="tenDangNhap" name="tenDangNhap" required>
